--- a/src/app/components/user-repos-list-item/user-repos-list-item.component.scss
+++ b/src/app/components/user-repos-list-item/user-repos-list-item.component.scss
@@ -7,3 +7,9 @@ mat-card {
 mat-card-content p:not(:nth-child(1)) {
     font-size: 12px;
 }
+
+@media screen and (max-width: 600px) {
+    mat-card {
+        flex-wrap: wrap;
+    }
+}
