--- a/src/app/components/user-repos-list/user-repos-list.component.html
+++ b/src/app/components/user-repos-list/user-repos-list.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-    <mat-card *ngIf="(repos$ | async) as repos; else loader">
+    <mat-card *ngIf="(repos$ | async) as repos; else loader" id="cardWrapper">
         <mat-card-title>
             <img src="{{repos[0].owner.avatar_url}}" alt="User avatar">
             {{ repos[0].owner.login | titlecase }}
@@ -17,7 +17,6 @@
                 mat-raised-button
                 color="primary"
                 (click)="redirectToProfile()"
-                align="right"
             >Go to profile</button>
         </mat-card-footer>
     </mat-card>
